. edge fix for z-index

--- a/src/main/resources/static-content/style.css
+++ b/src/main/resources/static-content/style.css
@@ -45,6 +45,7 @@ h3 {
     top: 0px;
     width: 120px;
     padding: 10px;
+    z-index: 2;
 }
 
 .topbar {
@@ -52,9 +53,10 @@ h3 {
     top: 0px;
     left: 0px;
     width: 100%;
-    height: 132px;
+    min-height: 132px;
     display: none;
     vertical-align: bottom;
+    z-index: 1;
 }
 
 .advancedsearch {
